# sports

./: .gitignore  LICENSE  README.md
.github/workflows/: autopilot-cleanup.yml  autopilot-mlb.yml  autopilot.yml  mlb-pipeline.yml  nba-pipeline.yml
autopilot/: requirements.txt  run_calibrate.py  run_cleanup.py  run_live.py  run_mlb_live.py  run_retrain.py
autopilot/coefficients/: nba_winprob_v1.json
autopilot/src/: db.py
autopilot/src/features/: constants.py  mlb_constants.py  mlb_snapshot.py  snapshot.py
autopilot/src/ingest/: espn_live.py  espn_mlb_live.py  nba_api_live.py  odds_espn_backfill.py  odds_historical.py  odds_oddsshark_backfill.py  odds_pregame.py  pbp_historical.py
autopilot/src/loop/: game_tracker.py  (+3 more)
desktop/: index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: architecture.md
mlb-pipeline/: requirements.txt  run_pipeline.py
mlb-pipeline/src/: gamelogs.py  games.py  players.py  playerstats.py  predict.py  train.py
nba-pipeline/: requirements.txt
nba-pipeline/models/: nba_winner.json  nba_winner_report.json
nba-pipeline/src/: gamelogs.py  games2.py
shared/mlb/: mlb_constants.py
shared/nba/: nba_api_client.py  nba_constants.py
shared/schemas/: autopilot_logs  autopilot_positions  autopilot_settings  autopilot_signals  autopilot_training_snapshots  mlb_gamelogs  mlb_games  mlb_players  mlb_playerstats
tests/: run_tests.py
web/: ETHOS.md  package-lock.json  package.json
web/src/: middleware.ts
(+53 files in other folders)
